--- a/frontend/src/app/modules/admin/main-admin/main-admin.component.html
+++ b/frontend/src/app/modules/admin/main-admin/main-admin.component.html
@@ -1,4 +1,4 @@
-<app-nav-bar></app-nav-bar>
+<app-admin-nav></app-admin-nav>
 <div class="container-fluid parallax-3">
   <div class="row align-items-center pt-4">
     <div class="col align-self-center perfil text-center">
