Base frontend con graficas

--- a/frontend/src/app/modules/admin/admin-nav/admin-nav.component.html
+++ b/frontend/src/app/modules/admin/admin-nav/admin-nav.component.html
@@ -4,7 +4,7 @@
         class="navbar-brand"
         style="font-family: 'Roboto mono', monospace;"
         href=""
-        >Charlie.</a
+        >VendeTuProducto.com</a
       >
       <button
         class="navbar-toggler"
